[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/miscs/paused_exit_selected.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/miscs/paused_exit.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/miscs/resume_selected.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/miscs/resume.png" type="Texture" id=4]
[ext_resource path="res://assets/scripts/global/PauseScreen.gd" type="Script" id=5]

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 1, 1, 1, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_top = 350
custom_constants/margin_left = 630
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 630.0
margin_top = 350.0
margin_right = 1280.0
margin_bottom = 720.0
use_top_left = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = -64.0
margin_top = -130.0
margin_right = 64.0
margin_bottom = 130.0
size_flags_horizontal = 4

[node name="ResumeButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="ExitButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 260.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
